priority donate one

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "palloc.h": "c",
         "switch.h": "c",
         "vaddr.h": "c",
-        "thread.h": "c"
+        "thread.h": "c",
+        "interrupt.h": "c"
     }
 }
