--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "array": "c",
         "initializer_list": "c",
         "utility": "c",
-        "malloc.h": "c"
+        "malloc.h": "c",
+        "syscall.h": "c"
     }
 }
