--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "utility": "c",
         "malloc.h": "c",
         "syscall.h": "c",
-        "init.h": "c"
+        "init.h": "c",
+        "process.h": "c"
     }
 }
