--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "process.h": "c",
         "*.tcc": "c",
         "ctype.h": "c",
-        "sstream": "c"
+        "sstream": "c",
+        "filesys.h": "c"
     }
 }
